fixed spacing

--- a/css/general.css
+++ b/css/general.css
@@ -50,7 +50,7 @@ header {
 }
 
 .billboard {
-    height: 23rem;
+    height: 24rem;
     background-size: 50rem;
     overflow: hidden;
     background-image: url(../images/billboardimage.jpg);
@@ -71,12 +71,13 @@ h1 {
 .headingbox {
     background-color: white;
     overflow: hidden;
-    margin: 1rem 5%;
+    margin: 3rem 5%;
     text-align: center;
     border-radius: .8rem;
-    box-shadow: .4rem .4rem .4rem .4rem rgba(0, 0, 0, .6);
+    box-shadow: .4rem .4rem .4rem .4rem rgba(0, 0, 0, .5);
     border-style: solid;
     color: #333333;
+    padding: 0 2%;
 }
 
 h2 {
@@ -88,10 +89,10 @@ h2 {
 .largebodytext {
     font-size: 1.5rem;
     font-weight: bolder;
-    margin: 3rem 5% 1rem;
+    margin: 3rem 5%;
     font-family: Arial, "Arial Bold", Sans-Serif;
     background-color: white;
-    padding: 1rem 5%;
+    padding: .5rem 5%;
     line-height: 2rem;
     border-style: solid;
     color: #666666;
@@ -102,7 +103,7 @@ h2 {
 }
 
 hr {
-    margin: 2rem 10%;
+    margin: 3rem 10%;
     border-style: inset;
 }
 
@@ -128,22 +129,23 @@ footer p {
 }
 
 figure {
-    margin: 1.5rem 10% 1.5rem;
+    margin: 3rem 10% 3rem;
     border-style: solid;
     background-color: #669999;
-    padding: 1rem;
+    padding: .5rem;
 }
 
 figcaption {
     text-align: center;
     font-family: Arial, "Arial-Bold", Sans-Serif;
     margin: .5rem 5% 0;
+    font-size: 1.5rem;
 }
 
 .dropcap {
-    margin: 1rem 10% 3rem;
+    margin: 3rem 10% 3rem;
     background-color: white;
-    padding: 1rem;
+    padding: .5rem 5%;
     line-height: 1.5rem;
     border-style: solid;
     font-size: 1rem;
@@ -151,19 +153,18 @@ figcaption {
 }
 
 .dropcap:first-letter {
-    font-size: 4rem;
+    font-size: 3rem;
     color: #ff0000;
     float: left;
     margin: 1rem 2% 0;
-    
 }
 
 .earlycareer {
     font-size: 1rem;
     font-family: Arial, "Arial Bold", Sans-Serif;
-    margin: 3rem 7% 3rem;
+    margin: 3rem 7%;
     background-color: white;
-    padding: 1rem;
+    padding: .5rem 5%;
     line-height: 1.5rem;
     border-style: solid;
 }
@@ -171,7 +172,7 @@ figcaption {
 .movielist {
     font-size: 1rem;
     font-family: Arial, "Arial Bold", Sans-Serif;
-    margin: 3rem 7% 3rem;
+    margin: 3rem 15%;
     background-color: white;
     padding: 1rem;
     line-height: 1.5rem;
@@ -225,27 +226,9 @@ figcaption span {
 .recentprojects {
     font-size: 1rem;
     font-family: Arial, "Arial Bold", Sans-Serif;
-    margin: 3rem 7% 3rem;
+    margin: 3rem 7%;
     background-color: white;
-    padding: 1rem;
+    padding: .5rem 5%;
     line-height: 1.5rem;
     border-style: solid;
-}
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-        
-    
-    
+}    
